--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <h3>House & Roof Washing</h3>
                             </div>
                         </a>
-                        <a href="#" data-target="pages/services/solar-pannel-cleaning.html" class="service-card" style="background-image: url('assets/images/services/solar-panel-cleaning.webp');" data-image-url="assets/images/services/solar-panel-cleaning.webp" data-color-class="gradient-2" data-service-title="Solar Panel Cleaning">
+                        <a href="#" data-target="pages/services/solar-panel-cleaning.html" class="service-card" style="background-image: url('assets/images/services/solar-panel-cleaning.webp');" data-image-url="assets/images/services/solar-panel-cleaning.webp" data-color-class="gradient-2" data-service-title="Solar Panel Cleaning">
                              <div class="card-content">
                                 <h3>Solar Panel Cleaning</h3>
                             </div>
@@ -102,7 +102,7 @@
                         <h3>Ready for a Transformation?</h3>
                         <p>Let's restore your home's curb appeal. Get a free, no-obligation estimate today.</p>
                     </div>
-                    <a href="#" class="btn btn-primary cta-btn">Get in touch</a>
+                    <a href="#" class="btn btn-primary cta-btn">Get a Quote</a>
                 </footer>
 
                 <footer class="app-footer"></footer>
@@ -130,7 +130,7 @@
                             <h3 class="card-title">House & Roof Washing</h3>
                         </div>
                     </a>
-                    <a href="#" data-target="pages/services/solar-pannel-cleaning.html" class="service-page-card" style="background-image: url('assets/images/services/solar-panel-cleaning.webp');" data-image-url="assets/images/services/solar-panel-cleaning.webp" data-color-class="gradient-2" data-service-title="Solar Panel Cleaning">
+                    <a href="#" data-target="pages/services/solar-panel-cleaning.html" class="service-page-card" style="background-image: url('assets/images/services/solar-panel-cleaning.webp');" data-image-url="assets/images/services/solar-panel-cleaning.webp" data-color-class="gradient-2" data-service-title="Solar Panel Cleaning">
                         <div class="service-page-card-overlay gradient-2"></div>
                         <div class="service-page-card-content">
                             <i class="fa-solid fa-solar-panel card-icon"></i>
@@ -212,7 +212,7 @@
                 </div>
             </header>
             <main class="page-content">
-                <h2 class="page-title animate-on-scroll">Get In Touch</h2>
+                <h2 class="page-title animate-on-scroll">Get a Quote</h2>
                 <div class="content-block">
                     <p class="text-center animate-on-scroll" style="margin-top: -20px; margin-bottom: 30px;">
                         Have a question or ready to book? Tap the chat icon in the corner to get started, or give us a call at <a href="tel:6573871505">(657) 387-1505</a>.
@@ -244,13 +244,15 @@
         <section class="page service-detail-page" id="page-service-detail-template">
             <header class="app-header">
                 <a href="#" class="header-back-btn"><i class="fas fa-chevron-left"></i> Back</a>
-                <h2 class="header-title">Service Name</h2>
+                <h2 class="header-title">Services</h2>
                 <div class="header-actions">
                     <a href="tel:6573871505" class="icon-btn" aria-label="Call"><i class="fa-solid fa-phone"></i></a>
                 </div>
             </header>
             <main class="page-content">
-                <div class="service-detail-hero"></div>
+                <div class="service-detail-hero">
+                    <h1 class="service-detail-hero-title"></h1>
+                </div>
                 <div class="service-detail-tabs">
                     <div class="service-detail-tabs-scroller">
                         <button class="service-detail-tab" data-section="overview">Overview</button>
