--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             </a>
             <a href="#" class="action-sheet-btn" id="action-sheet-open-chatbot">
                 <i class="fa-solid fa-robot"></i>
-                <span>Get an Instant Quote</span>
+                <span>Get a Quote</span>
             </a>
         </div>
         <button class="action-sheet-cancel" id="cta-cancel-btn">Cancel</button>
