fixed mobile/desktop rules

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (min-width: 1024px)" href="css/desktop.css">
 </head>
 <body>
 
@@ -21,12 +22,19 @@
         <section class="page active" id="page-home">
              <header class="app-header main-header">
                 <a href="#" class="header-brand-name home-btn scroll-to-top">MODE</a>
+                <nav class="desktop-nav">
+                    <a href="#" class="nav-item active" data-target="page-home"><span>Home</span></a>
+                    <a href="#" class="nav-item" data-target="page-services"><span>Services</span></a>
+                    <a href="#" class="nav-item" data-target="page-locations"><span>Locations</span></a>
+                    <a href="#" class="nav-item" data-target="page-contact"><span>Contact</span></a>
+                </nav>
                 <div class="header-actions">
                     <a href="#" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="#" class="social-link" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                    <a href="tel:6573871505" class="icon-btn" aria-label="Call">
+                    <a href="tel:6573871505" class="icon-btn mobile-only" aria-label="Call">
                         <i class="fa-solid fa-phone"></i>
                     </a>
+                    <a href="#" class="btn btn-primary desktop-only cta-btn">Get a Free Estimate</a>
                 </div>
             </header>
 
@@ -112,12 +120,19 @@
         <section class="page" id="page-services">
             <header class="app-header">
                  <a href="#" class="header-brand-name home-btn">MODE</a>
+                 <nav class="desktop-nav">
+                    <a href="#" class="nav-item" data-target="page-home"><span>Home</span></a>
+                    <a href="#" class="nav-item active" data-target="page-services"><span>Services</span></a>
+                    <a href="#" class="nav-item" data-target="page-locations"><span>Locations</span></a>
+                    <a href="#" class="nav-item" data-target="page-contact"><span>Contact</span></a>
+                </nav>
                 <div class="header-actions">
                     <a href="#" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="#" class="social-link" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                    <a href="tel:6573871505" class="icon-btn" aria-label="Call">
+                    <a href="tel:6573871505" class="icon-btn mobile-only" aria-label="Call">
                         <i class="fa-solid fa-phone"></i>
                     </a>
+                    <a href="#" class="btn btn-primary desktop-only cta-btn">Get a Free Estimate</a>
                 </div>
             </header>
             <main class="page-content">
@@ -174,12 +189,19 @@
         <section class="page" id="page-locations">
             <header class="app-header">
                  <a href="#" class="header-brand-name home-btn">MODE</a>
+                 <nav class="desktop-nav">
+                    <a href="#" class="nav-item" data-target="page-home"><span>Home</span></a>
+                    <a href="#" class="nav-item" data-target="page-services"><span>Services</span></a>
+                    <a href="#" class="nav-item active" data-target="page-locations"><span>Locations</span></a>
+                    <a href="#" class="nav-item" data-target="page-contact"><span>Contact</span></a>
+                </nav>
                 <div class="header-actions">
                     <a href="#" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="#" class="social-link" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                    <a href="tel:6573871505" class="icon-btn" aria-label="Call">
+                    <a href="tel:6573871505" class="icon-btn mobile-only" aria-label="Call">
                         <i class="fa-solid fa-phone"></i>
                     </a>
+                    <a href="#" class="btn btn-primary desktop-only cta-btn">Get a Free Estimate</a>
                 </div>
             </header>
             <main class="page-content">
@@ -203,12 +225,19 @@
         <section class="page" id="page-contact">
             <header class="app-header">
                  <a href="#" class="header-brand-name home-btn">MODE</a>
+                 <nav class="desktop-nav">
+                    <a href="#" class="nav-item" data-target="page-home"><span>Home</span></a>
+                    <a href="#" class="nav-item" data-target="page-services"><span>Services</span></a>
+                    <a href="#" class="nav-item" data-target="page-locations"><span>Locations</span></a>
+                    <a href="#" class="nav-item active" data-target="page-contact"><span>Contact</span></a>
+                </nav>
                 <div class="header-actions">
                     <a href="#" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="#" class="social-link" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                    <a href="tel:6573871505" class="icon-btn" aria-label="Call">
+                    <a href="tel:6573871505" class="icon-btn mobile-only" aria-label="Call">
                         <i class="fa-solid fa-phone"></i>
                     </a>
+                    <a href="#" class="btn btn-primary desktop-only cta-btn">Get a Free Estimate</a>
                 </div>
             </header>
             <main class="page-content">
@@ -244,9 +273,15 @@
         <section class="page service-detail-page" id="page-service-detail-template">
             <header class="app-header">
                 <a href="#" class="header-back-btn"><i class="fas fa-chevron-left"></i> Back</a>
-                <h2 class="header-title">Services</h2>
+                <nav class="desktop-nav">
+                    <a href="#" class="nav-item" data-target="page-home"><span>Home</span></a>
+                    <a href="#" class="nav-item active" data-target="page-services"><span>Services</span></a>
+                    <a href="#" class="nav-item" data-target="page-locations"><span>Locations</span></a>
+                    <a href="#" class="nav-item" data-target="page-contact"><span>Contact</span></a>
+                </nav>
                 <div class="header-actions">
-                    <a href="tel:6573871505" class="icon-btn" aria-label="Call"><i class="fa-solid fa-phone"></i></a>
+                    <a href="tel:6573871505" class="icon-btn mobile-only" aria-label="Call"><i class="fa-solid fa-phone"></i></a>
+                     <a href="#" class="btn btn-primary desktop-only cta-btn">Get a Free Estimate</a>
                 </div>
             </header>
             <main class="page-content">
