--- a/index.html
+++ b/index.html
@@ -293,6 +293,19 @@
                     <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="#" aria-label="Yelp"><i class="fab fa-yelp"></i></a>
                 </div>
+                 <div class="footer-locations-accordion">
+                    <div class="locations-header">
+                        <span>View All Service Locations</span>
+                        <i class="fas fa-chevron-down locations-header-icon"></i>
+                    </div>
+                    <div class="locations-list-container">
+                        <div class="city-card-grid"></div>
+                        <div class="pagination-controls">
+                            <button class="pagination-btn" data-pagination-prev>&laquo; Prev</button>
+                            <button class="pagination-btn" data-pagination-next>Next &raquo;</button>
+                        </div>
+                    </div>
+                </div>
                 <div class="footer-copyright">
                      © 2024 Pete's Holiday Lighting. All rights reserved.
                 </div>
