--- a/index.html
+++ b/index.html
@@ -143,19 +143,29 @@
 
         <section class="page" id="page-services">
             <header class="app-header">
-                <a href="#" class="header-brand-name home-btn">Services</a>
+                <a href="#" class="header-brand-name home-btn">Pete's Holiday Lighting</a>
+                <div class="header-actions">
+                    <a href="tel:+19097503143" class="icon-btn mobile-only" aria-label="Call">
+                        <i class="fa-solid fa-phone"></i>
+                    </a>
+                </div>
             </header>
             <main class="page-content">
                 <h2 class="page-title">Our Services</h2>
                 <div class="services-page-grid">
                     </div>
+                <div class="content-block text-center" style="margin-top: var(--space-7);">
+                    <h2 class="block-title">Ready for a Brilliant Holiday?</h2>
+                    <p class="block-subtitle">Let us handle the lights so you can handle the cheer. Get your free, no-obligation quote today!</p>
+                    <a href="#" data-target="page-contact" class="btn btn-primary cta-btn">Schedule a Free Consultation</a>
+                </div>
             </main>
             <footer class="app-footer"></footer>
         </section>
 
         <section class="page" id="page-locations">
             <header class="app-header">
-                <a href="#" class="header-brand-name home-btn">Locations</a>
+                <a href="#" class="header-brand-name home-btn">Pete's Holiday Lighting</a>
             </header>
             <main class="page-content">
                 <h2 class="page-title">Our Service Area</h2>
