added location CTAs

--- a/index.html
+++ b/index.html
@@ -323,6 +323,15 @@
         </div>
     </div>
 
+    <div id="location-modal-overlay"></div>
+    <div id="location-modal-panel">
+        <button id="location-modal-close-btn">&times;</button>
+        <div id="location-modal-content">
+            <p id="location-modal-message"></p>
+            <a href="#" id="location-modal-cta" class="btn btn-primary cta-btn">Get My Free Quote!</a>
+        </div>
+    </div>
+
 
     <nav class="bottom-nav">
         <a href="#" class="nav-item active" data-target="page-home">
