--- a/index.html
+++ b/index.html
@@ -166,9 +166,14 @@
         <section class="page" id="page-locations">
             <header class="app-header">
                 <a href="#" class="header-brand-name home-btn">Pete's Holiday Lighting</a>
+                 <div class="header-actions">
+                    <a href="tel:+19097503143" class="icon-btn mobile-only" aria-label="Call">
+                        <i class="fa-solid fa-phone"></i>
+                    </a>
+                </div>
             </header>
             <main class="page-content">
-                <h2 class="page-title">Our Service Area</h2>
+                <h2 class="page-title">Our Service Areas</h2>
                 <div class="location-filters-bar">
                     <div class="search-input-wrapper">
                          <i class="fa-solid fa-search search-icon"></i>
