--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     </div>
                 </div>
 
-                <form class="contact-form animate-on-scroll" name="holiday-lighting-quote">
+                <form class="contact-form animate-on-scroll" name="holiday-lighting-quote" data-netlify="true">
                     <div class="form-grid">
                         <div class="form-group">
                             <label for="first-name">First Name</label>
