attempt to fix netlify deployment

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
                 </div>
 
                 <form class="contact-form animate-on-scroll" name="holiday-lighting-quote" data-netlify="true">
+                    <input type="hidden" name="form-name" value="holiday-lighting-quote" />
                     <div class="form-grid">
                         <div class="form-group">
                             <label for="first-name">First Name</label>
