--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     </div>
                 </div>
 
-                <form class="contact-form animate-on-scroll" name="holiday-lighting-quote" method="POST" data-netlify="true"></form>
+                <form class="contact-form animate-on-scroll" name="holiday-lighting-quote" method="POST" data-netlify="true">
                     <input type="hidden" name="form-name" value="holiday-lighting-quote" />
                     <div class="form-grid">
                         <div class="form-group">
