latest update includes modal for submission and refresh of all homescren animation upon revisit, not just refresh

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     </div>
                 </div>
 
-                <form class="contact-form animate-on-scroll" name="holiday-lighting-quote" method="POST" data-netlify="true">
+                <form class="contact-form animate-on-scroll" id="contact-form" name="holiday-lighting-quote" method="POST" data-netlify="true">
                     <input type="hidden" name="form-name" value="holiday-lighting-quote" />
                     <div class="form-grid">
                         <div class="form-group">
@@ -346,6 +346,17 @@
         </div>
     </div>
 
+    <div id="form-success-modal-overlay"></div>
+    <div id="form-success-modal-panel">
+        <div class="success-icon-wrapper">
+            <i class="fa-solid fa-check"></i>
+        </div>
+        <div id="form-success-modal-content">
+            <h3>You're on the Nice List!</h3>
+            <p>Your consultation request is on its way. We're warming up the ladders and will be in touch shortly!</p>
+            <button id="form-success-return-btn" class="btn btn-primary cta-btn">Back to Home</button>
+        </div>
+    </div>
 
     <nav class="bottom-nav">
         <a href="#" class="nav-item active" data-target="page-home">
