updated dynamic submission messages

--- a/index.html
+++ b/index.html
@@ -352,11 +352,12 @@
             <i class="fa-solid fa-check"></i>
         </div>
         <div id="form-success-modal-content">
-            <h3>You're on the Nice List!</h3>
-            <p>Your consultation request is on its way. We're warming up the ladders and will be in touch shortly!</p>
+            <h3 id="form-success-title">You're on the Nice List!</h3>
+            <p id="form-success-message">Your consultation request is on its way. We're warming up the ladders and will be in touch shortly!</p>
             <button id="form-success-return-btn" class="btn btn-primary cta-btn">Back to Home</button>
         </div>
     </div>
+
 
     <nav class="bottom-nav">
         <a href="#" class="nav-item active" data-target="page-home">
