--- a/index.html
+++ b/index.html
@@ -405,11 +405,11 @@
         </a>
         <a href="#" class="nav-item" data-target="page-locations">
             <i class="fa-solid fa-map-marker-alt"></i>
-            <span>Locations</span>
+            <span>Areas</span>
         </a>
         <a href="#" class="nav-item" data-target="page-contact">
             <i class="fa-solid fa-calendar-check"></i>
-            <span>Get a Quote</span>
+            <span>Quote</span>
         </a>
     </nav>
     
