fixed layout issues of services cta button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="hero-content">
                         <img src="assets/images/lights/logo.webp" alt="Pete's Holiday Lighting Logo" class="hero-logo">
                         <h2 class="home-hero-subtitle">Southern California’s Premier Christmas Light Installation Experts</h2>
-                        <a href="#" data-target="page-contact" class="btn btn-primary" style="margin-top: 20px;">Schedule a Free Consultation</a>
+                        <a href="#" data-target="page-contact" class="btn btn-primary cta-btn" style="margin-top: 20px;">Schedule a Free Consultation</a>
                     </div>
                 </section>
 
@@ -405,7 +405,7 @@
         </a>
         <a href="#" class="nav-item" data-target="page-locations">
             <i class="fa-solid fa-map-marker-alt"></i>
-            <span>Areas</span>
+            <span>Locations</span>
         </a>
         <a href="#" class="nav-item" data-target="page-contact">
             <i class="fa-solid fa-calendar-check"></i>
