deasktop is good to go, filter logic from footer fixed

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <p class="block-subtitle animate-on-scroll">Use the form or contact us directly through any of the methods below.</p>
                      <div class="contact-socials animate-on-scroll">
                         <a href="tel:+19097503143" aria-label="Call" class="icon-btn"><i class="fa-solid fa-phone"></i></a>
-                        <a href="mailto:quotes@petesholidaylighting.com" aria-label="Email" class="icon-btn"><i class="fa-solid fa-envelope"></i></a>
+                        <a href="mailto:petesholidaylighting7@gmail.com" aria-label="Email" class="icon-btn"><i class="fa-solid fa-envelope"></i></a>
                         <a href="https://www.instagram.com/petes_holiday_lighting/" target="_blank" aria-label="Instagram" class="icon-btn"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
